package modele;

public enum TypeVehicule {
	Voiture, 
	DeuxRoues,
	PoidsLourd;
	
}
