package vue;

import javafx.fxml.FXML;
import javafx.scene.control.TableView;
import modele.Client;

public class RootMenuController {
	

}
