/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Abonne
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Abonne.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Abonne.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Abonne 
public class Abonne extends Client {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Abonne.java
*********************************************************************/

