/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Borne
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Borne.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Borne.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Borne 
public class Borne {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Borne.java
*********************************************************************/

