/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Camera
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Camera.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Camera.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Camera 
public class Camera {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Camera.java
*********************************************************************/

