/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Client
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Client.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Client.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Client 
public class Client {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Client.java
*********************************************************************/

