/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Parking
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Parking.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Parking.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Parking 
public class Parking {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Parking.java
*********************************************************************/

