/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Super_Abonne
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Super_Abonne.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Super_Abonne.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Super_Abonne 
public class Super_Abonne extends Abonne {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Super_Abonne.java
*********************************************************************/

