/*********************************************************************
	Rhapsody	: 8.1.5
	Login		: yoann.gathignol
	Component	: DefaultComponent
	Configuration 	: DefaultConfig
	Model Element	: Teleporteur
//!	Generated Date	: Thu, 11, Jan 2018 
	File Path	: DefaultComponent/DefaultConfig/Default/Teleporteur.java
*********************************************************************/

package Default;


//----------------------------------------------------------------------------
// Default/Teleporteur.java                                                                  
//----------------------------------------------------------------------------

//## package Default 


/**
[[ * @author $Author]]
[[ * @version $Version]]
[[ * @see $See]]
[[ * @since $Since]]
*/
//## actor Teleporteur 
public class Teleporteur {
    
}
/*********************************************************************
	File Path	: DefaultComponent/DefaultConfig/Default/Teleporteur.java
*********************************************************************/

